# libodb-mysql

./: CMakeLists.txt
cmake/: libodb-mysql-config.cmake
